k8s/nest-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-one
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nest-one
  template:
    metadata:
      labels:
        app: nest-one
    spec:
      containers:
        - name: nest-one
          image: nest-one
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.5"
