k8s/nest-two-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-two
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nest-two
  template:
    metadata:
      labels:
        app: nest-two
    spec:
      containers:
        - name: nest-two
          image: nest-two
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.5"
