k8s/nest-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nesttwo-srv
spec:
  selector:
    app: nest-two
  ports:
    - targetPort: 3000
      port: 8000
